[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Card/Card.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/RewardScreen/CardPicker.gd" type="Script" id=2]
[ext_resource path="res://Scenes/RewardScreen/CardPickerModal.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false

[node name="CardPicker" type="Node2D"]
script = ExtResource( 2 )

[node name="CardReward1" parent="." instance=ExtResource( 1 )]
position = Vector2( 192, 272 )
scale = Vector2( 0.5, 0.5 )

[node name="CardRewardButton1" type="Button" parent="CardReward1"]
margin_left = -368.0
margin_top = -400.0
margin_right = 368.0
margin_bottom = 448.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardReward2" parent="." instance=ExtResource( 1 )]
position = Vector2( 576, 272 )
scale = Vector2( 0.5, 0.5 )

[node name="CardRewardButton2" type="Button" parent="CardReward2"]
margin_left = -368.0
margin_top = -400.0
margin_right = 368.0
margin_bottom = 448.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardReward3" parent="." instance=ExtResource( 1 )]
position = Vector2( 384, 720 )
scale = Vector2( 0.5, 0.5 )

[node name="CardRewardButton3" type="Button" parent="CardReward3"]
margin_left = -368.0
margin_top = -400.0
margin_right = 368.0
margin_bottom = 448.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardPickerModal" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="pressed" from="CardReward1/CardRewardButton1" to="." method="_on_CardRewardButton_pressed" binds= [ 0 ]]
[connection signal="pressed" from="CardReward2/CardRewardButton2" to="." method="_on_CardRewardButton_pressed" binds= [ 1 ]]
[connection signal="pressed" from="CardReward3/CardRewardButton3" to="." method="_on_CardRewardButton_pressed" binds= [ 2 ]]
